# UI

./: CMakeLists.txt  dashboardwidget.cpp  dashboardwidget.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
